Fixed formatting to better align

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,17 @@ a:hover,
   border-top: 1px solid #dddddd;  
 }
 
+hr {
+  border: 0;
+  display: none;
+}
+
 @media (min-width: 1180px) {
+
+  hr {
+    display: block;
+    clear: both;
+  }
 
 
   body:not(.no-literate) .content img {
@@ -95,20 +105,18 @@ a:hover,
 
   body:not(.no-literate) .content iframe {
     float: right;
-    clear: none;
+    clear: both;
     max-width: 330px;
     padding: 5px;
     background: #ffffff;
     border: 1px solid #f2f2f2;
-    float: right;
-    clear: right;
   }
 
   body:not(.no-literate) .content p.img {
     width: 380px;
     padding: 0 20px;
     float: right;
-    clear: right;
+    clear: both;
   }
 
   body:not(.no-literate) .content table {
@@ -147,21 +155,6 @@ a:hover,
   body:not(.no-literate) .content > pre + h6,
   body:not(.no-literate) .content > blockquote + h6,
   body:not(.no-literate) .content > p.img + h6 {
-    clear: none;
-  }
-
-  body:not(.no-literate) .content > pre + p,
-  body:not(.no-literate) .content > blockquote + p,
-  body:not(.no-literate) .content > pre + ul,
-  body:not(.no-literate) .content > blockquote + ul,
-  body:not(.no-literate) .content > pre + ol,
-  body:not(.no-literate) .content > blockquote + ol,
-  body:not(.no-literate) .content > pre + h4,
-  body:not(.no-literate) .content > blockquote + h4,
-  body:not(.no-literate) .content > pre + h5,
-  body:not(.no-literate) .content > blockquote + h5,
-  body:not(.no-literate) .content > pre + h6,
-  body:not(.no-literate) .content > blockquote + h6 {
     clear: none;
   }
 
